--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,17 +39,36 @@ a {
 }
 /* 推しアクスタを探せ
 */
-.QuizFrame {
+.Quiz-wrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   width: 100%;
   padding: 0 15px;
   margin: 0 auto;
   background-color: #61239b98;
 }
 .present_box  {
-  width: 100px;
-  height: 100px;
+  width: 160px;
+  height: 160px;
+  margin: 2%;
   background-color: white;
   color: black;
+}
+/*　メッセージボックス
+*/
+.msgbox {
+  padding: 0.5em 1em;
+  margin: 10px 10%;
+  font-weight: bold;
+  color: #6091d3;/*文字色*/
+  background: #FFF;
+  border: solid 3px #6091d3;/*線*/
+  border-radius: 10px;/*角の丸み*/
+}
+.msgbox p {
+  margin: 0; 
+  padding: 0;
 }
 /*　共通
 */
@@ -90,7 +109,8 @@ a {
 .fa {
   margin-right: 5px;
 }
-
+/*　ヘッダー部分
+*/
 header {
   height: 65px;
   width: 100%;
@@ -107,6 +127,7 @@ header {
 
 .header-left {
   float: left;
+  color: white;
 }
 
 .header-right {
