--- a/stylesheet.css
+++ b/stylesheet.css
@@ -70,6 +70,26 @@ a {
   margin: 0; 
   padding: 0;
 }
+.debugBoc{
+  display: none;/* none リリース　outside　デバッグ　*/
+}
+/*　リプレイボタン
+*/
+.rep_button {
+  color: #eb3515;/*文字色*/
+}
+/* プレゼントBOX
+*/
+.BoxImg00 {
+  width: 80px;
+  height: 80px;
+  transition: all 300ms 0s ease;
+}
+.BoxImg00:active  {
+  width: 180px;
+  height: 80px;
+}
+
 /*　共通
 */
 .btn-wrapper {
@@ -166,22 +186,6 @@ header {
 
 .heading h2 {
   font-weight: normal;
-}
-
-.lesson {
-  float: left;
-  width: 25%;
-}
-
-.lesson-icon {
-  position: relative;
-}
-
-.lesson-icon p {
-  position: absolute;
-  top: 37%;
-  width: 100%;
-  color: white;
 }
 
 .text-contents {
